# plugin-worklog

./: LICENSE  README.md
brainstorm/: case-study-bfc.md  case-study-prompt-engineer.md  expr-documentation.md  expr-spec-structure.md  expr-workflows.md  index.md  pitfalls.md  software-architecture-principles.md
brainstorm/prompt-engineering/: compress.jsonl  compress.md
brainstorm/resource/: agent-pain-points.md  ai-coding-agents.md  beads-hook-enforcement.md  context-file-effectiveness.md  development-paradigms.md  worklog-skill-v1.md
exams/: .gitignore
exams/entity/: completion-drift.toml  context.md  happy-create.toml  happy-lifecycle.toml  happy-path.toml  happy-update.toml  happy.toml  pitfall-completion.toml  pitfall-drift.md  pitfall-drift.toml  pitfall-governance.toml  pitfall-markers.toml  pitfall-precedence.toml  pitfall-spec-authoring.toml  pitfalls.toml  precedence-drift.toml  tools.md
exams/entity/fixtures/: pyproject.toml  src-notify-sender-fixed.py  src-notify-sender.py  src-recipes-router.py  src-recipes-store.py
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: allow-skill-scripts.py
tests/: helpers.py  loader.py  test_archive.py  test_backlog.py  test_drift.py  test_list.py  test_next_id.py  test_search.py  test_validate.py
tests/lib/: test_constants.py  test_discover.py  test_parse.py
worklog/: tags.csv  tags.md
worklog/decision/: d0001-scripts-bundled-with-plugin.md  d0002-task-borne-priority.md
worklog/spec/: s0001-methodology.md  s0003-design-research.md  s0010-tooling.md  s0014-exams.md  (+6 more)
(+74 files in other folders)
